Project

General

Profile

Actions

Bug #13038

closed

ruby 2.4 rc1 fails to build on FreeBSD due to failure to find crypt.h

Bug #13038: ruby 2.4 rc1 fails to build on FreeBSD due to failure to find crypt.h

Added by swills (Steve Wills) almost 10 years ago. Updated almost 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:78664]

Description

When trying to build ruby 2.4 on FreeBSD, it fails with error:

string.c:33:11: fatal error: 'crypt.h' file not found

Actions

Also available in: PDF Atom